Tiny spacing issue

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -80,8 +80,8 @@ ul li {
     list-style-type: none;
     margin: 0px;
     margin-left: -10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 ul {
